# demo-snippets

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md
clisrc/: CMakeLists.txt  climain.cpp  fcpy_perf.cpp
libfastcpy/: CMakeLists.txt  dvik_memcpy.c  dvik_memcpy.h  fastcpy.cpp  fastcpy.h
